--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ loguru==0.7.2
 flake8==7.0.0
 black==23.12.1
 mypy==1.8.0
+pytest==7.4.4
+pytest-asyncio==0.23.3
+pytest-cov==4.1.0
+pytest-randomly==3.15.0
+pytest-sugar==0.9.7
